P01/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:32:46 **** Incremental Build of configuration Debug for project BMTR_RTOS_ASRV1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../FATFS/Target -I../FATFS/App -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FatFs/src -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "BMTR_RTOS_ASRV1.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\ashen\Documents\GitHub\MSc-Project\P01\BMTR_RTOS_ASRV1\STM32F756ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMTR_RTOS_ASRV1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BMTR_RTOS_ASRV1.elf
 
arm-none-eabi-size  BMTR_RTOS_ASRV1.elf 
arm-none-eabi-objdump -h -S BMTR_RTOS_ASRV1.elf  > "BMTR_RTOS_ASRV1.list"
   text	   data	    bss	    dec	    hex	filename
  39272	    172	  25100	  64544	   fc20	BMTR_RTOS_ASRV1.elf
Finished building: default.size.stdout
 
Finished building: BMTR_RTOS_ASRV1.list
 
09:35:29 **** Incremental Build of configuration Debug for project BMTR_RTOS_ASRV1 ****
make -j12 all 
arm-none-eabi-size  BMTR_RTOS_ASRV1.elf 
   text	   data	    bss	    dec	    hex	filename
  39272	    172	  25100	  64544	   fc20	BMTR_RTOS_ASRV1.elf
Finished building: default.size.stdout
 
10:35:04 **** Incremental Build of configuration Debug for project BMTR_RTOS_ASRV1 ****
make -j12 all 
arm-none-eabi-size  BMTR_RTOS_ASRV1.elf 
   text	   data	    bss	    dec	    hex	filename
  39272	    172	  25100	  64544	   fc20	BMTR_RTOS_ASRV1.elf
Finished building: default.size.stdout
 
10:59:20 **** Incremental Build of configuration Debug for project BMTR_RTOS_ASRV1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../FATFS/Target -I../FATFS/App -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FatFs/src -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "BMTR_RTOS_ASRV1.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\ashen\Documents\GitHub\MSc-Project\P01\BMTR_RTOS_ASRV1\STM32F756ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMTR_RTOS_ASRV1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BMTR_RTOS_ASRV1.elf
 
arm-none-eabi-size  BMTR_RTOS_ASRV1.elf 
arm-none-eabi-objdump -h -S BMTR_RTOS_ASRV1.elf  > "BMTR_RTOS_ASRV1.list"
   text	   data	    bss	    dec	    hex	filename
  39272	    172	  25100	  64544	   fc20	BMTR_RTOS_ASRV1.elf
Finished building: default.size.stdout
 
Finished building: BMTR_RTOS_ASRV1.list
 
00:57:31 **** Incremental Build of configuration Debug for project BMTR_RTOS_ASRV1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../FATFS/Target -I../FATFS/App -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FatFs/src -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'StartTask02':
../Core/Src/main.c:854:46: error: 'hspi1' undeclared (first use in this function); did you mean 'hspi4'?
  854 |                     HAL_SPI_TransmitReceive(&hspi1, txData, rxData, sizeof(txData), HAL_MAX_DELAY);
      |                                              ^~~~~
      |                                              hspi4
../Core/Src/main.c:854:46: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
00:57:42 **** Incremental Build of configuration Debug for project BMTR_RTOS_ASRV1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../FATFS/Target -I../FATFS/App -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FatFs/src -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "BMTR_RTOS_ASRV1.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\ashen\Documents\GitHub\MSc-Project\P01\BMTR_RTOS_ASRV1\STM32F756ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMTR_RTOS_ASRV1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BMTR_RTOS_ASRV1.elf
 
arm-none-eabi-size  BMTR_RTOS_ASRV1.elf 
arm-none-eabi-objdump -h -S BMTR_RTOS_ASRV1.elf  > "BMTR_RTOS_ASRV1.list"
   text	   data	    bss	    dec	    hex	filename
  41208	    184	  25120	  66512	  103d0	BMTR_RTOS_ASRV1.elf
Finished building: default.size.stdout
 
Finished building: BMTR_RTOS_ASRV1.list
 
01:16:20 **** Incremental Build of configuration Debug for project BMTR_RTOS_ASRV1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F756xx -c -I../FATFS/Target -I../FATFS/App -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FatFs/src -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "BMTR_RTOS_ASRV1.elf" @"objects.list"   -mcpu=cortex-m7 -T"C:\Users\ashen\Documents\GitHub\MSc-Project\P01\BMTR_RTOS_ASRV1\STM32F756ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BMTR_RTOS_ASRV1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: BMTR_RTOS_ASRV1.elf
 
arm-none-eabi-size  BMTR_RTOS_ASRV1.elf 
arm-none-eabi-objdump -h -S BMTR_RTOS_ASRV1.elf  > "BMTR_RTOS_ASRV1.list"
   text	   data	    bss	    dec	    hex	filename
  41208	    184	  25120	  66512	  103d0	BMTR_RTOS_ASRV1.elf
Finished building: default.size.stdout
 
Finished building: BMTR_RTOS_ASRV1.list
 
